# GPT_AITIS

./: .gitignore  README.md  batch_job_fixed.sbatch  combine_code.txt  download_embedding_model.sh  download_models.sh  download_phi4.sh  pdf_batch_converter.py  pyproject.toml
diagrams/: pipeline.puml
resources/embeddings/: policy_10-1_AXA 20220316 DIP AGGIUNTIVO ALI@TOP_embeddings.npz  policy_18_embeddings.npz  policy_19_embeddings.npz  policy_20_embeddings.npz
resources/ground_truth/: GT_policy_10-1.json  GT_policy_18.json  GT_policy_19.json  GT_policy_20.json
resources/questions/: questions.xlsx
resources/raw_ground_truth/: raw_policy_10-1.json  raw_policy_18.json  raw_policy_19.json  raw_policy_20.json
resources/response_formats/: travel_insurance_agent.json  travel_insurance_agent_old.json
resources/results/: data_ass_0.tsv  data_ass_18.tsv  run_output_1.tsv  run_output_1_gpt4o.tsv  run_output_1_old.tsv
resources/results/eval_new/: latex_tables_comparison_02-07-2025_07-27-49.tex
src/: assistant_manager.py  config.py  get_pdf_code.py  logging_utils.py  main.py  output_formatter.py  rag_runner.py  utils.py
src/models/: base.py  factory.py  hf_model.py  openai_model.py  openrouter_model.py  qwen_model.py  shared_client.py  vector_store.py
src/prompts/: __init__.py  insurance_prompts.py  verification_prompts.py
src/scripts/: clean_outcome_justification.py  evaluate_results.py  latex_tables.py  main_flask.py  policy_converter.py  policy_output_24.xlsx  policy_output_26.xlsx  prepare_GT_labels.py  preprocessing_pdf.py  show_table.py  text_iou.py
(+605 files in other folders)
