[project]
name = "gpt-aitis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "camelot-py>=1.0.0",
    "dotenv>=0.9.9",
    "editdistance>=0.8.1",
    "flask>=3.1.0",
    "jsonschema>=4.23.0",
    "langchain>=0.3.24",
    "numpy>=2.2.5",
    "openai>=1.75.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pymupdf>=1.25.5",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "sentence-transformers>=4.1.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
